adaptive of the first section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 					<a href="" class="header__link -up">Минск</a>
 				</div>
 
+				<div class="header__city">
+					<a href="" class="header__link -up -blue">Санкт-Петербург</a>
+					<div class="arrow"></div>
+				</div>
+
 				<div class="header__right">
 					<nav class="header__nav">
 						<a href="" class="header__link -op">Программа</a>
@@ -32,6 +37,13 @@
 					</nav>
 
 					<button class="button -header">Записаться на курс</button>
+					<button class="button -header -e">Запись на курс</button>
+
+					<div class="burger">
+						<div class="burger__particle"></div>
+						<div class="burger__particle -s"></div>
+						<div class="burger__particle"></div>
+					</div>
 				</div>
 			</header>
 
@@ -41,6 +53,14 @@
 					<h2 class="hero__title">Начни делать Customer Development и проверять гипотезы</h2>
 					<h5 class="hero__subtitle">На оффлайн курсе из 5 воркшопов</h5>
 					<button class="button -success -shadow">Записаться</button>
+				</div>
+
+				<div class="circle -hero">
+					<h5 class="circle__title">Оценка</h5>
+					<h3 class="circle__mark">9 из 10</h3>
+					<h3 class="circle__name">Антон Волков</h3>
+					<h3 class="circle__penname">Solvery</h3>
+					<a href="" class="circle__link">Читать отзыв →</a>
 				</div>
 			</div>
 		</div>
