--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<link rel="stylesheet" type="text/css" href="./assets/styles/circle.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/title.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/header.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/card.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/section.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -25,7 +27,7 @@
 
 				<div class="header__city">
 					<a href="" class="header__link -up -blue">Санкт-Петербург</a>
-					<div class="arrow"></div>
+					<!--<div class="arrow"></div>-->
 				</div>
 
 				<div class="header__right">
@@ -61,6 +63,43 @@
 					<h3 class="circle__name">Антон Волков</h3>
 					<h3 class="circle__penname">Solvery</h3>
 					<a href="" class="circle__link">Читать отзыв →</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="section">
+		<div class="container">
+			<div class="section__content">
+				<div class="content -left">
+					<h3 class="section__title">Если вы не делаете Customer Development — вы не управляете движением к product-market fit</h3>
+				</div>
+				<div class="content -right">
+					<div class="content__top">
+						
+						<div class="card">
+							<h5 class="card__title">94%</h5>
+							<p class="card__info">стартапов умирают в течение 3 лет, и главная причина этого — отсутствие product-market fit</p>
+						</div>
+						<div class="card">
+							<h5 class="card__title">менее 50%</h5>
+							<p class="card__info">тестируемых Amazon функций реально запускаются после проверки гипотез</p>
+						</div>
+
+					</div>
+					
+					<div class="content__bottom">
+
+						<div class="card">
+							<h5 class="card__title">только 50%</h5>
+							<p class="card__info">компаний по результатам исследования SaaS проводят многовариантные A / B тестирования</p>
+						</div>
+						<div class="card">
+							<h5 class="card__title">от 40 до 90%</h5>
+							<p class="card__info">новых продуктов не получают значительного признания на рынке, так как строятся на основе творчества, интуиции и интеллекта</p>
+						</div>
+
+					</div>
 				</div>
 			</div>
 		</div>
