--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="./assets/styles/header.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/card.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/section.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/reason.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -76,11 +77,11 @@
 				<div class="content -right">
 					<div class="content__top">
 						
-						<div class="card">
+						<div class="card -twoinrow">
 							<h5 class="card__title">94%</h5>
 							<p class="card__info">стартапов умирают в течение 3 лет, и главная причина этого — отсутствие product-market fit</p>
 						</div>
-						<div class="card">
+						<div class="card -twoinrow">
 							<h5 class="card__title">менее 50%</h5>
 							<p class="card__info">тестируемых Amazon функций реально запускаются после проверки гипотез</p>
 						</div>
@@ -89,15 +90,40 @@
 					
 					<div class="content__bottom">
 	
-						<div class="card">
+						<div class="card -twoinrow">
 							<h5 class="card__title">только 50%</h5>
 							<p class="card__info">компаний по результатам исследования SaaS проводят многовариантные A / B тестирования</p>
 						</div>
-						<div class="card">
+						<div class="card -twoinrow">
 							<h5 class="card__title">от 40 до 90%</h5>
 							<p class="card__info">новых продуктов не получают значительного признания на рынке, так как строятся на основе творчества, интуиции и интеллекта</p>
 						</div>
 	
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="reason">
+		<div class="container">
+			<div class="reason__content">
+				<h2 class="reason__title">Кому и зачем знать Customer Development</h2>
+				<div class="content__cards">
+
+					<div class="card -transparent -threeinrow">
+						<h5 class="card__title -up">Продуктовому дизайнеру</h5>
+						<p class="card__info">лучше узнать потребность клиента и научиться быстро проверять прототипы и макеты на пользователях чтобы исправлять ошибки и делать интерфейсы кратно качественнее</p>
+					</div>
+
+					<div class="card -transparent -threeinrow">
+						<h5 class="card__title -up">Продакт-Менеджерам</h5>
+						<p class="card__info">идеально знать мотивацию своих пользователей и принимать продуктовые решения быстрее и значительно качественнее</p>
+					</div>
+
+					<div class="card -transparent -threeinrow">
+						<h5 class="card__title -up">Основателям Старптапов</h5>
+						<p class="card__info">запустить процесс проверки гипотез в котором вы быстрее и ЗНАЧИТЕЛЬНО дешевле найдёте product-market fit</p>
 					</div>
 				</div>
 			</div>
