4th section changed

--- a/index.html
+++ b/index.html
@@ -165,11 +165,9 @@
 					<a href="#" class="activities__link -up">Смотреть программу полностью</a>
 
 					<div class="card -circle">
-						<h5 class="card__title -up">Начнешь, наконец, делать custdev</h5>
+						<h5 class="card__title -up -w">Начнешь, наконец, делать custdev</h5>
 						<p class="card__info">про который все давно говорят, но мало кто делает</p>
 					</div>
-
-					
 				</div>
 			</div>
 		</div>
