favicon and 5th section started

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Customer Development</title>
 	<meta charset="utf-8">
+	<link rel="shortcut icon" href="./assets/img/faviconca.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/base.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/containers.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/hero.css">
@@ -140,21 +141,21 @@
 
 				<div class="activities__cards">
 					<div class="activities__top">
-						<div class="card -transparent -twoinrow">
+						<div class="card -transparent -twoinrow -s">
 							<h5 class="card__title -up">7 лекций</h5>
 							<p class="card__info">насыщенных практикой</p>
 						</div>
-						<div class="card -transparent -twoinrow">
+						<div class="card -transparent -twoinrow -s">
 							<h5 class="card__title -up">2 гипотезы</h5>
 							<p class="card__info">минимум, которые проверишь на курсе</p>
 						</div>
 					</div>
 					<div class="activities__bottom">
-						<div class="card -transparent -twoinrow">
+						<div class="card -transparent -twoinrow -s">
 							<h5 class="card__title -up">3 методички</h5>
 							<p class="card__info">с пошаговым описанием действий как провести классный CustDev и как проверить любую гипотезу</p>
 						</div>
-						<div class="card -transparent -twoinrow">
+						<div class="card -transparent -twoinrow -s">
 							<h5 class="card__title -up">20 интервью</h5>
 							<p class="card__info">с пользователями твоего продукта</p>
 						</div>
@@ -167,6 +168,42 @@
 					<div class="card -circle">
 						<h5 class="card__title -up -w">Начнешь, наконец, делать custdev</h5>
 						<p class="card__info">про который все давно говорят, но мало кто делает</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="result">
+		<div class="container">
+			<div class="result__content">
+				<h3 class="result__title">Результат</h3>
+				<div class="result__cards">
+					<div class="result -top">
+						<div class="card">
+							<img src="" alt="" class="card__img">
+							<h5 class="card__title"></h5>
+							<p class="card__info">с пользователями твоего продукта</p>
+						</div>
+
+						<div class="card">
+							<img src="" alt="" class="card__img">
+							<h5 class="card__title"></h5>
+							<p class="card__info">с пользователями твоего продукта</p>
+						</div>
+					</div>
+					<div class="result -bottom">
+						<div class="card">
+							<img src="" alt="" class="card__img">
+							<h5 class="card__title"></h5>
+							<p class="card__info">с пользователями твоего продукта</p>
+						</div>
+
+						<div class="card">
+							<img src="" alt="" class="card__img">
+							<h5 class="card__title"></h5>
+							<p class="card__info">с пользователями твоего продукта</p>
+						</div>
 					</div>
 				</div>
 			</div>
