5th section in ptogress

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" type="text/css" href="./assets/styles/section.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/reason.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/activities.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/result.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -176,33 +177,41 @@
 
 	<section class="result">
 		<div class="container">
-			<div class="result__content">
+			<<div class="result__content">
 				<h3 class="result__title">Результат</h3>
 				<div class="result__cards">
-					<div class="result -top">
-						<div class="card">
-							<img src="" alt="" class="card__img">
-							<h5 class="card__title"></h5>
-							<p class="card__info">с пользователями твоего продукта</p>
+					<div class="result__top">
+						<div class="card -twoinrow -img">
+							<img src="./assets/img/result_1.png" alt="" class="card__img">
+							<div class="card__text">
+								<h5 class="card__title">Ты начнёшь делать Customer Development и проверять гипотезы в своём проекте</h5>
+								<p class="card__info">Структура курса построена построена вокруг практики в проектах участников курса. 100% слушателей этого курса будут применять оба навыка в своих проектах</p>
+							</div>
 						</div>
-
-						<div class="card">
-							<img src="" alt="" class="card__img">
-							<h5 class="card__title"></h5>
-							<p class="card__info">с пользователями твоего продукта</p>
+			
+						<div class="card -twoinrow -img">
+							<img src="./assets/img/result_2.png" alt="" class="card__img">
+							<div class="card__text">
+								<h5 class="card__title">Заведенный процесс</h5>
+								<p class="card__info">Обязательной частью обучения будет встройка процессов постоянного Customer Development и проверки гипотез в ежедневную рутину</p>
+							</div>
 						</div>
 					</div>
-					<div class="result -bottom">
-						<div class="card">
-							<img src="" alt="" class="card__img">
-							<h5 class="card__title"></h5>
-							<p class="card__info">с пользователями твоего продукта</p>
+					<div class="result__bottom">
+						<div class="card -twoinrow -img">
+							<img src="./assets/img/result_3.png" alt="" class="card__img">
+							<div class="card__text">
+								<h5 class="card__title">Инструменты, которые останутся с вами надолго</h5>
+								<p class="card__info">Все участники курса получат два набора карт — конструкторы, из которых можно будет собрать идеальный процесс Customer Development и проверить любую гипотезу</p>
+							</div>
 						</div>
-
-						<div class="card">
-							<img src="" alt="" class="card__img">
-							<h5 class="card__title"></h5>
-							<p class="card__info">с пользователями твоего продукта</p>
+			
+						<div class="card -twoinrow -img">
+							<img src="./assets/img/result_4.png" alt="" class="card__img">
+							<div class="card__text">
+								<h5 class="card__title">Кейсы и приёмы топовых компаний рунета</h5>
+								<p class="card__info">Расскажу и разберём кейсы, хаки и нюансы топовых команд России: SkyEng, Яндекс, Chatfuel</p>
+							</div>
 						</div>
 					</div>
 				</div>
