5th section in progress v.3

--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@
 				</div>
 				<div class="content -right">		
 					<div class="card -twoinrow">
-						<h5 class="card__title">94%</h5>
+						<h5 class="card__title -l">94%</h5>
 						<p class="card__info">стартапов умирают в течение 3 лет, и главная причина этого — отсутствие product-market fit</p>
 					</div>
 					<div class="card -twoinrow">
-						<h5 class="card__title">менее 50%</h5>
+						<h5 class="card__title -l">менее 50%</h5>
 						<p class="card__info">тестируемых Amazon функций реально запускаются после проверки гипотез</p>
 					</div>
 	
 					<div class="card -twoinrow">
-						<h5 class="card__title">только 50%</h5>
+						<h5 class="card__title -l">только 50%</h5>
 						<p class="card__info">компаний по результатам исследования SaaS проводят многовариантные A / B тестирования</p>
 					</div>
 					<div class="card -twoinrow">
-						<h5 class="card__title">от 40 до 90%</h5>
+						<h5 class="card__title -l">от 40 до 90%</h5>
 						<p class="card__info">новых продуктов не получают значительного признания на рынке, так как строятся на основе творчества, интуиции и интеллекта</p>
 					</div>
 				</div>
