--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="./assets/styles/reason.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/activities.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/result.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/explanation.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -186,6 +187,49 @@
 							<h5 class="card__title">Кейсы и приёмы топовых компаний рунета</h5>
 							<p class="card__info">Расскажу и разберём кейсы, хаки и нюансы топовых команд России: SkyEng, Яндекс, Chatfuel</p>
 						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="explanation">
+		<div class="container">
+			<div class="explanation__content">
+				<h3 class="explanation__title">Почему мне можно доверять</h3>
+				<div class="person">
+					<img src="./assets/img/explanation_1.png" alt="" class="person__img">
+					<div class="circle -s"></div>
+
+					<div class="card">
+						<h5 class="card__title">Алексей Иванов</h5>
+						<p class="card__info">Ex-Lead Product Manager</p>
+					</div>
+				</div>
+
+				<div class="explanation__cards">
+					<div class="card -fourinrow -transparent">
+						<img src="" alt="" class="card__img">
+						<h5 class="card__title"></h5>
+						<p class="card__info"></p>
+					</div>
+
+					<div class="card -fourinrow -transparent">
+						<img src="" alt="" class="card__img">
+						<h5 class="card__title"></h5>
+						<p class="card__info"></p>
+					</div>
+
+					<div class="card -fourinrow -transparent">
+						<img src="" alt="" class="card__img">
+						<h5 class="card__title"></h5>
+						<p class="card__info"></p>
+					</div>
+
+					<div class="card -fourinrow -transparent">
+						<img src="" alt="" class="card__img">
+						<h5 class="card__title"></h5>
+						<p class="card__info"></p>
 					</div>
 				</div>
 			</div>
