6th section before adaptive

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" type="text/css" href="./assets/styles/activities.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/result.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/explanation.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/video.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -198,9 +199,13 @@
 			<div class="explanation__content">
 				<h3 class="explanation__title">Почему мне можно доверять</h3>
 				<div class="person">
-					<img src="./assets/img/explanation_1.png" alt="" class="person__img">
-					<div class="circle -s"></div>
-
+					<div class="video">
+						<img src="./assets/img/explanation_p.png" alt="" class="person__img">
+						<div class="video__control">
+							<div class="triangle"></div>
+						</div>
+					</div>
+					
 					<div class="card">
 						<h5 class="card__title">Алексей Иванов</h5>
 						<p class="card__info">Ex-Lead Product Manager</p>
@@ -209,27 +214,27 @@
 
 				<div class="explanation__cards">
 					<div class="card -fourinrow -transparent">
-						<img src="" alt="" class="card__img">
-						<h5 class="card__title"></h5>
-						<p class="card__info"></p>
+						<img src="./assets/img/explanation_1.png" alt="" class="card__img">
+						<h5 class="card__title">Опыт в продукте</h5>
+						<p class="card__info">Отвечал за продукт поиска по изображениям, с помощью Customer Development и юзабилити-исследований добились кратного роста метрик</p>
 					</div>
 
 					<div class="card -fourinrow -transparent">
-						<img src="" alt="" class="card__img">
-						<h5 class="card__title"></h5>
-						<p class="card__info"></p>
+						<img src="./assets/img/explanation_2.png" alt="" class="card__img">
+						<h5 class="card__title">Обучил CustDev`у 400+ человек</h5>
+						<p class="card__info">400+ человек уже прошли курс по CustDev и проверке гипотез в рамках отдельного курса, так и в составе программы "Руководитель digital-продукта"</p>
 					</div>
 
 					<div class="card -fourinrow -transparent">
-						<img src="" alt="" class="card__img">
-						<h5 class="card__title"></h5>
-						<p class="card__info"></p>
+						<img src="./assets/img/explanation_3.png" alt="" class="card__img">
+						<h5 class="card__title">Опыт разработки бота</h5>
+						<p class="card__info">Создавали с нуля конструктор ботов для Messenger и выводили в лидеры рынка конструкторов ботов</p>
 					</div>
 
 					<div class="card -fourinrow -transparent">
-						<img src="" alt="" class="card__img">
-						<h5 class="card__title"></h5>
-						<p class="card__info"></p>
+						<img src="./assets/img/explanation_4.png" alt="" class="card__img">
+						<h5 class="card__title">Топ-2 — оценка лектора</h5>
+						<p class="card__info">Урезанный курс также читал в крупных digital -школах, студенты оценили как Топ-2 преподавателя</p>
 					</div>
 				</div>
 			</div>
