--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 						</div>
 					</div>
 					
-					<div class="card">
+					<div class="card -l">
 						<h5 class="card__title">Алексей Иванов</h5>
 						<p class="card__info">Ex-Lead Product Manager</p>
 					</div>
