--- a/index.html
+++ b/index.html
@@ -171,22 +171,34 @@
 				<h3 class="result__title">Результат</h3>
 				<div class="result__cards">
 						<div class="card -twoinrow -img">
-							<h5 class="card__title">Ты начнёшь делать Customer Development и проверять гипотезы в своём проекте</h5>
-							<p class="card__info">Структура курса построена построена вокруг практики в проектах участников курса. 100% слушателей этого курса будут применять оба навыка в своих проектах</p>
+							<img src="./assets/img/result_1.png" alt="" class="card__img">
+							<div class="card__text">
+								<h5 class="card__title">Ты начнёшь делать Customer Development и проверять гипотезы в своём проекте</h5>
+								<p class="card__info">Структура курса построена построена вокруг практики в проектах участников курса. 100% слушателей этого курса будут применять оба навыка в своих проектах</p>
+							</div>
 						</div>
 			
 						<div class="card -twoinrow -img">
-							<h5 class="card__title">Заведенный процесс</h5>
-							<p class="card__info">Обязательной частью обучения будет встройка процессов постоянного Customer Development и проверки гипотез в ежедневную рутину</p>
+							<img src="./assets/img/result_2.png" alt="" class="card__img">
+							<div class="card__text">
+								<h5 class="card__title">Заведенный процесс</h5>
+								<p class="card__info">Обязательной частью обучения будет встройка процессов постоянного Customer Development и проверки гипотез в ежедневную рутину</p>
+							</div>
 						</div>
 						<div class="card -twoinrow -img">
-							<h5 class="card__title">Инструменты, которые останутся с вами надолго</h5>
-							<p class="card__info">Все участники курса получат два набора карт — конструкторы, из которых можно будет собрать идеальный процесс Customer Development и проверить любую гипотезу</p>
+							<img src="./assets/img/result_3.png" alt="" class="card__img">
+							<div class="card__text">
+								<h5 class="card__title">Инструменты, которые останутся с вами надолго</h5>
+								<p class="card__info">Все участники курса получат два набора карт — конструкторы, из которых можно будет собрать идеальный процесс Customer Development и проверить любую гипотезу</p>
+							</div>
 						</div>
 			
 						<div class="card -twoinrow -img">
-							<h5 class="card__title">Кейсы и приёмы топовых компаний рунета</h5>
-							<p class="card__info">Расскажу и разберём кейсы, хаки и нюансы топовых команд России: SkyEng, Яндекс, Chatfuel</p>
+							<img src="./assets/img/result_4.png" alt="" class="card__img">
+							<div class="card__text">
+								<h5 class="card__title">Кейсы и приёмы топовых компаний рунета</h5>
+								<p class="card__info">Расскажу и разберём кейсы, хаки и нюансы топовых команд России: SkyEng, Яндекс, Chatfuel</p>
+							</div>
 						</div>
 					</div>
 				</div>
