Trying to fix 3rd

--- a/index.html
+++ b/index.html
@@ -18,42 +18,41 @@
 	<link rel="stylesheet" type="text/css" href="./assets/styles/activities.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/result.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/explanation.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/feedback.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/video.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	<section class="hero">
+		<header>
+			<div class="header__location">
+				<a href="" class="header__link -up -blue">Санкт-Петербург</a>
+			</div>
+
+			<div class="header__city">
+				<a href="" class="header__link -up -blue">Санкт-Петербург</a>
+			</div>
+
+			<div class="header__right">
+				<nav class="header__nav">
+					<a href="" class="header__link -op">Программа</a>
+					<a href="" class="header__link -op">Отзывы</a>
+					<a href="" class="header__link -op">Стоимость</a>
+					<a href="" class="header__link -op">О преподавателе</a>
+				</nav>
+
+				<button class="button -header">Записаться на курс</button>
+				<button class="button -header -e">Запись на курс</button>
+
+				<div class="burger">
+					<div class="burger__particle"></div>
+					<div class="burger__particle -s"></div>
+					<div class="burger__particle"></div>
+				</div>
+			</div>
+		</header>
+
 		<div class="container">
-			<header>
-				<div class="header__location">
-					<a href="" class="header__link -up -blue">Санкт-Петербург</a>
-					<a href="" class="header__link -up">Москва</a>
-					<a href="" class="header__link -up">Минск</a>
-				</div>
-
-				<div class="header__city">
-					<a href="" class="header__link -up -blue">Санкт-Петербург</a>
-				</div>
-
-				<div class="header__right">
-					<nav class="header__nav">
-						<a href="" class="header__link -op">Программа</a>
-						<a href="" class="header__link -op">Отзывы</a>
-						<a href="" class="header__link -op">Стоимость</a>
-						<a href="" class="header__link -op">О преподавателе</a>
-					</nav>
-
-					<button class="button -header">Записаться на курс</button>
-					<button class="button -header -e">Запись на курс</button>
-
-					<div class="burger">
-						<div class="burger__particle"></div>
-						<div class="burger__particle -s"></div>
-						<div class="burger__particle"></div>
-					</div>
-				</div>
-			</header>
-
 			<div class="hero__content">
 				<div class="hero__info">
 					<h5 class="hero__date">Санкт-Петербург 10-21 Мая</h5>
@@ -250,6 +249,12 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</section>
+
+	<section class="feedback">
+		<div class="container">
+			<div class="comment"></div>
 		</div>
 	</section>
 </body>
