small bags fixed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="./assets/styles/hero.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/variables.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/button.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/burger.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/circle.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/title.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/header.css">
@@ -20,6 +21,8 @@
 	<link rel="stylesheet" type="text/css" href="./assets/styles/explanation.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/feedback.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/video.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/comment.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/bubble.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -45,9 +48,9 @@
 				<button class="button -header -e">Запись на курс</button>
 
 				<div class="burger">
-					<div class="burger__particle"></div>
-					<div class="burger__particle -s"></div>
-					<div class="burger__particle"></div>
+					<i class="burger__particle"></i>
+					<i class="burger__particle -s"></i>
+					<i class="burger__particle"></i>
 				</div>
 			</div>
 		</header>
@@ -254,7 +257,33 @@
 
 	<section class="feedback">
 		<div class="container">
-			<div class="comment"></div>
+			<div class="feedback__content">
+				<div class="comment">
+					<div class="comment__img"></div>
+					<div class="bubble">
+						<h5 class="bubble__title -up"></h5>
+						<p class="bubble__info">Куча интерактива, живая подача, небольшое шоу — Леша хорошо удерживает внимание и даёт не просто информацию, а разрабатывает (насколько это возможно за это время) именно скилл.</p>
+					</div>
+				</div>
+
+				<div class="comment">
+					<div class="comment__img"></div>
+					<div class="bubble">
+						<h5 class="bubble__title -up"></h5>
+						<p class="bubble__info">Дизайнеру важно уметь общаться с клиентами: искать боли, находить настоящую мотивацию, чтобы придумывать гипотезы и внедрять их, или создавать новые продукты. Чтобы этому научиться, я пошел на курс по Сustomer Development. Курс состоит из 4 занятий. На каждом занятии мы проходили теорию и сразу же закрепляли её на практике, и, конечно же, получали объемную домашку. По итогу курса у меня стала формироваться картина о том, что делать дальше.</p>
+					</div>
+				</div>
+
+				<div class="comment">
+					<div class="comment__img"></div>
+					<div class="bubble">
+						<h5 class="bubble__title -up"></h5>
+						<p class="bubble__info">Custdev это про обратную связь и выход из зоны комфорта, а этого никто не любит. Куда приятнее уютно пилить фичи. Леша рассказал кучу всяких хаков того, как делать custdev постоянно, не тратя на это уйму сил. Советую</p>
+					</div>
+				</div>
+
+				<div class="circle -img"></div>
+			</div>
 		</div>
 	</section>
 </body>
