--- a/index.html
+++ b/index.html
@@ -258,33 +258,42 @@
 	<section class="feedback">
 		<div class="container">
 			<div class="feedback__content">
-				<div class="comment">
-					<div class="comment__img"></div>
-					<div class="bubble">
-						<h5 class="bubble__title -up"></h5>
-						<p class="bubble__info">Куча интерактива, живая подача, небольшое шоу — Леша хорошо удерживает внимание и даёт не просто информацию, а разрабатывает (насколько это возможно за это время) именно скилл.</p>
+				<h3 class="feedback__title">Отзывы</h3>
+				<div class="feedback__container">
+					<div class="comment">
+						<div class="bubble">
+							<h5 class="bubble__title -up">Иван Матвейчук</h5>
+							<p class="bubble__info">Куча интерактива, живая подача, небольшое шоу — Леша хорошо удерживает внимание и даёт не просто информацию, а разрабатывает (насколько это возможно за это время) именно скилл.</p>
+						</div>
+						<div class="comment__img"></div>
+					</div>
+
+					<div class="comment">
+						<div class="bubble">
+							<h5 class="bubble__title -up">Сергей Конев</h5>
+							<p class="bubble__info">Дизайнеру важно уметь общаться с клиентами: искать боли, находить настоящую мотивацию, чтобы придумывать гипотезы и внедрять их, или создавать новые продукты. Чтобы этому научиться, я пошел на курс по Сustomer Development. Курс состоит из 4 занятий. На каждом занятии мы проходили теорию и сразу же закрепляли её на практике, и, конечно же, получали объемную домашку. По итогу курса у меня стала формироваться картина о том, что делать дальше.</p>
+						</div>
+						<div class="comment__img"></div>
+					</div>
+
+					<div class="comment">
+						<div class="bubble">
+							<h5 class="bubble__title -up">Екатерина Cиванова</h5>
+							<p class="bubble__info">Custdev это про обратную связь и выход из зоны комфорта, а этого никто не любит. Куда приятнее уютно пилить фичи. Леша рассказал кучу всяких хаков того, как делать custdev постоянно, не тратя на это уйму сил. Советую</p>
+						</div>
+						<div class="comment__img"></div>
 					</div>
 				</div>
 
-				<div class="comment">
-					<div class="comment__img"></div>
-					<div class="bubble">
-						<h5 class="bubble__title -up"></h5>
-						<p class="bubble__info">Дизайнеру важно уметь общаться с клиентами: искать боли, находить настоящую мотивацию, чтобы придумывать гипотезы и внедрять их, или создавать новые продукты. Чтобы этому научиться, я пошел на курс по Сustomer Development. Курс состоит из 4 занятий. На каждом занятии мы проходили теорию и сразу же закрепляли её на практике, и, конечно же, получали объемную домашку. По итогу курса у меня стала формироваться картина о том, что делать дальше.</p>
-					</div>
+				<div class="circle -img">
+					<img src="assets/img/circle_1.png" alt="" class="circle__img">
+					<p class="circle__info">Рассказ о курсе от дизайнера market.ru</p>
+					<a href="" class="circle__link -s">Читать отзыв →</a>
 				</div>
-
-				<div class="comment">
-					<div class="comment__img"></div>
-					<div class="bubble">
-						<h5 class="bubble__title -up"></h5>
-						<p class="bubble__info">Custdev это про обратную связь и выход из зоны комфорта, а этого никто не любит. Куда приятнее уютно пилить фичи. Леша рассказал кучу всяких хаков того, как делать custdev постоянно, не тратя на это уйму сил. Советую</p>
-					</div>
-				</div>
-
-				<div class="circle -img"></div>
 			</div>
 		</div>
 	</section>
+
+	<section></section>
 </body>
 </html>
