7th finished, titles as well

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<link rel="stylesheet" type="text/css" href="./assets/styles/result.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/explanation.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/feedback.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/photos.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/video.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/comment.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/bubble.css">
@@ -79,7 +80,7 @@
 		<div class="container">
 			<div class="section__content">
 				<div class="content -left">
-					<h3 class="section__title">Если вы не делаете Customer Development — вы не управляете движением к product-market fit</h3>
+					<h3 class="title -m">Если вы не делаете Customer Development — вы не управляете движением к product-market fit</h3>
 				</div>
 				<div class="content -right">		
 					<div class="card -twoinrow">
@@ -107,7 +108,7 @@
 	<section class="reason">
 		<div class="container">
 			<div class="reason__content">
-				<h2 class="reason__title">Кому и зачем знать Customer Development</h2>
+				<h3 class="title -m">Кому и зачем знать Customer Development</h2>
 				<div class="reason__cards">
 
 					<div class="card -transparent -threeinrow">
@@ -134,7 +135,7 @@
 	<section class="activities">
 		<div class="container">
 			<div class="activities__content">
-				<h3 class="activities__title">Что будет на курсе</h3>
+				<h3 class="title -m">Что будет на курсе</h3>
 
 				<div class="activities__cards">
 					<div class="card -transparent -twoinrow -s">
@@ -170,7 +171,7 @@
 	<section class="result">
 		<div class="container">
 			<div class="result__content">
-				<h3 class="result__title">Результат</h3>
+				<h3 class="title -l -w">Результат</h3>
 				<div class="result__cards">
 						<div class="card -twoinrow -img">
 							<img src="./assets/img/result_1.png" alt="" class="card__img">
@@ -211,7 +212,7 @@
 	<section class="explanation">
 		<div class="container">
 			<div class="explanation__content">
-				<h3 class="explanation__title">Почему мне можно доверять</h3>
+				<h3 class="title -l">Почему мне можно доверять</h3>
 				<div class="person">
 					<div class="video">
 						<img src="./assets/img/explanation_p.png" alt="" class="person__img">
@@ -258,7 +259,7 @@
 	<section class="feedback">
 		<div class="container">
 			<div class="feedback__content">
-				<h3 class="feedback__title">Отзывы</h3>
+				<h3 class="title -l">Отзывы</h3>
 				<div class="feedback__container">
 					<div class="comment">
 						<div class="bubble">
@@ -294,6 +295,18 @@
 		</div>
 	</section>
 
-	<section></section>
+	<section class="photos">
+		<h3 class="title -m">Как проходили прошлые потоки</h2>
+		<div class="photos__content">
+			<img src="./assets/img/photos_1.png" alt="" class="photos__img">
+			<img src="./assets/img/photos_2.png" alt="" class="photos__img">
+			<img src="./assets/img/photos_3.png" alt="" class="photos__img">
+			<img src="./assets/img/photos_4.png" alt="" class="photos__img">
+			<img src="./assets/img/photos_5.png" alt="" class="photos__img">
+			<img src="./assets/img/photos_6.png" alt="" class="photos__img">
+			<img src="./assets/img/photos_7.png" alt="" class="photos__img">
+			<img src="./assets/img/photos_8.png" alt="" class="photos__img">
+		</div>
+	</section>
 </body>
 </html>
