--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<link rel="stylesheet" type="text/css" href="./assets/styles/video.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/comment.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/bubble.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/price.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -306,6 +307,37 @@
 			<img src="./assets/img/photos_6.png" alt="" class="photos__img">
 			<img src="./assets/img/photos_7.png" alt="" class="photos__img">
 			<img src="./assets/img/photos_8.png" alt="" class="photos__img">
+		</div>
+	</section>
+
+	<section class="price">
+		<div class="container">
+			<div class="price__content">
+				<div class="circle -s"></div>
+				<h3 class="title -m">Стоимость для компаний</h3>
+				<div class="price__cards">
+					<div class="card -threeinrow">
+						<h5 class="card__title">32 900 ₽</h5>
+						<p class="card__info -b">1 сотрудник</p>
+						<button class="button -success -up">Оформить</button>
+					</div>
+					<div class="card -threeinrow">
+						<h5 class="card__title">29 900 ₽ / чел</h5>
+						<p class="card__info -b">2 сотрудника</p>
+						<button class="button -success -up">Оформить</button>
+					</div>
+					<div class="card -threeinrow -circle -s">
+						<h5 class="card__title">26 900 ₽ / чел</h5>
+						<p class="card__info -b">5+ сотрудников</p>
+						<button class="button -success -up">Оформить</button>
+					</div>
+					<div class="card">
+						<h5 class="card__title">25 900 ₽</h5>
+						<p class="card__info -b">Тариф “Для себя”</p>
+						<button class="button -success -up">Оформить</button>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 </body>
