8th section - circle

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 				<div class="activities__end">
 					<a href="#" class="activities__link -up">Смотреть программу полностью</a>
 
-					<div class="card -circle">
+					<div class="card -circle -m">
 						<h5 class="card__title -up -w">Начнешь, наконец, делать custdev</h5>
 						<p class="card__info">про который все давно говорят, но мало кто делает</p>
 					</div>
@@ -311,32 +311,44 @@
 	</section>
 
 	<section class="price">
+		<div class="circle -s -right"></div>
 		<div class="container">
 			<div class="price__content">
-				<div class="circle -s"></div>
 				<h3 class="title -m">Стоимость для компаний</h3>
 				<div class="price__cards">
-					<div class="card -threeinrow">
+					<div class="card -threeinrow -col">
 						<h5 class="card__title">32 900 ₽</h5>
 						<p class="card__info -b">1 сотрудник</p>
-						<button class="button -success -up">Оформить</button>
+						<button class="button -success -up -s">Оформить</button>
 					</div>
-					<div class="card -threeinrow">
+					<div class="card -threeinrow -col">
 						<h5 class="card__title">29 900 ₽ / чел</h5>
 						<p class="card__info -b">2 сотрудника</p>
-						<button class="button -success -up">Оформить</button>
+						<button class="button -success -up -s">Оформить</button>
 					</div>
-					<div class="card -threeinrow -circle -s">
+					<div class="card -threeinrow -circle -s -col">
 						<h5 class="card__title">26 900 ₽ / чел</h5>
 						<p class="card__info -b">5+ сотрудников</p>
-						<button class="button -success -up">Оформить</button>
+						<button class="button -success -up -s">Оформить</button>
 					</div>
-					<div class="card">
-						<h5 class="card__title">25 900 ₽</h5>
-						<p class="card__info -b">Тариф “Для себя”</p>
-						<button class="button -success -up">Оформить</button>
+					<div class="card -f">
+						<div class="card__text">
+							<h5 class="card__title">25 900 ₽</h5>
+							<p class="card__info -b">Тариф “Для себя”</p>
+						</div>
+						<button class="button -success -up -s">Оформить</button>
 					</div>
 				</div>
+
+				<div class="circle -left -xs -bottom -blue"></div>
+			</div>
+		</div>
+	</section>
+
+	<section class="cost">
+		<div class="container">
+			<div class="cost__content">
+				
 			</div>
 		</div>
 	</section>
