Circle in process

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	<link rel="stylesheet" type="text/css" href="./assets/styles/comment.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/bubble.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/price.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/cost.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -340,7 +341,7 @@
 					</div>
 				</div>
 
-				<div class="circle -left -xs -bottom -blue"></div>
+				<div class="circle -left -xs -bottom -darkblue"></div>
 			</div>
 		</div>
 	</section>
