--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 						<p class="card__info -b">5+ сотрудников</p>
 						<button class="button -success -up -s">Оформить</button>
 					</div>
-					<div class="card -f">
+					<div class="card -f -l">
 						<div class="card__text">
 							<h5 class="card__title">25 900 ₽</h5>
 							<p class="card__info -b">Тариф “Для себя”</p>
@@ -349,7 +349,35 @@
 	<section class="cost">
 		<div class="container">
 			<div class="cost__content">
-				
+				<h3 class="title -m -w">В стоимость входит</h3>
+				<div class="cost__cards">
+					<div class="card -twoinrow -transparent">
+						<p class="card__info">методичка по проведению Customer Development и по настройке процессов проверки гипотез</p>
+					</div>
+
+					<div class="card -twoinrow -img -f">
+						<img src="./assets/img/cost_1.png" alt="" class="card__img">
+						<div class="card__text">
+							<h5 class="card__title -up">3 месяца подписки</h5>
+							<p class="card__info">можно прочитать книгу (бумажный тираж закончился)</p>
+						</div>
+					</div>
+
+					<div class="card -twoinrow -video">
+						<img src="" alt="" class="card__img">
+						<div class="card__text">
+							<h5 class="card__title -up">Видеозапись курса</h5>
+						</div>
+					</div>
+
+					<div class="card -twoinrow -img -block">
+						<img src="./assets/img/cost_2.png" alt="" class="card__img">
+						<div class="card__text">
+							<h5 class="card__title -up">Бессмертный чат</h5>
+							<p class="card__info">Вы познакомитесь с большим количеством интересных продактов и сможете общаться и после курса, общий чат в Telegram останется с вами надолго</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
