9th section in process

--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@
 			<div class="cost__content">
 				<h3 class="title -m -w">В стоимость входит</h3>
 				<div class="cost__cards">
-					<div class="card -twoinrow -transparent">
-						<p class="card__info">методичка по проведению Customer Development и по настройке процессов проверки гипотез</p>
+					<div class="card -twoinrow -transparent -end">
+						<p class="card__info -end">методичка по проведению Customer Development и по настройке процессов проверки гипотез</p>
 					</div>
 
 					<div class="card -twoinrow -img -f">
