9th section before adaptive

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 	</section>
 
 	<section class="cost">
-		<div class="container">
+		<div class="container -cost">
 			<div class="cost__content">
 				<h3 class="title -m -w">В стоимость входит</h3>
 				<div class="cost__cards">
@@ -364,7 +364,12 @@
 					</div>
 
 					<div class="card -twoinrow -video">
-						<img src="" alt="" class="card__img">
+						<div class="video">
+							<img src="./assets/img/cost_3.png" alt="" class="card__img">
+							<div class="video__control -s">
+								<div class="triangle -s"></div>
+							</div>
+						</div>
 						<div class="card__text">
 							<h5 class="card__title -up">Видеозапись курса</h5>
 						</div>
