--- a/index.html
+++ b/index.html
@@ -352,6 +352,8 @@
 				<h3 class="title -m -w">В стоимость входит</h3>
 				<div class="cost__cards">
 					<div class="card -twoinrow -transparent -end">
+						<img src="./assets/img/cost_4.png" alt="" class="card__img -none">
+						<h5 class="card__title -up -none">3 методички</h5>
 						<p class="card__info -end">методичка по проведению Customer Development и по настройке процессов проверки гипотез</p>
 					</div>
 
@@ -385,6 +387,8 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="circle -xs -bottom -left"></div>
 	</section>
 </body>
 </html>
