last section in process

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<link rel="stylesheet" type="text/css" href="./assets/styles/bubble.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/price.css">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/cost.css">
+	<link rel="stylesheet" type="text/css" href="./assets/styles/forms.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -389,6 +390,19 @@
 		</div>
 
 		<div class="circle -xs -bottom -left"></div>
+	</section>
+
+	<section class="forms">
+		<div class="container">
+			<div class="forms__content">
+				<form class="form">
+					<input type="text" placeholder="Имя" class="form__particle">
+					<input type="text" placeholder="Телефон" class="form__particle">
+					<input type="text" placeholder="E-mail" class="form__particle">
+					<button class="button -success -in">Записаться на курс</button>
+				</form>
+			</div>
+		</div>
 	</section>
 </body>
 </html>
